--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="https://gabrielsenn.pythonanywhere.com/" class="btn-raios">𝙏𝙊𝘿𝙊𝙎 𝙊𝙎 𝘾𝙊𝙍𝙏𝙀𝙎</a>
     </div>
 
-    <a href="https://agendamentobarberr.netlify.app/"
+    <a href= "https://agendamentbarber.netlify.app/"
        class="btn-agendamento"
        target="_blank">
        𝗔𝗚𝗘𝗡𝗗𝗔𝗠𝗘𝗡𝗧𝗢
